# optical-image-aberration-Removel_using_StitchNet

./: .gitignore  CITATION.cff  README.md  codemeta.json  infer_stitch.py  main.py  preprocess.py  pyproject.toml  readme.txt  regroup_tiles.py  requirements-dev.txt  requirements.txt  start.py  stitch_auto.py  streamlit_app.py  train_stitch.py  train_stitch_v2.py  verify_auto_index.py
.github/workflows/: ci.yml  pages.yml
backend/: __init__.py  app.py  jobs.py  security.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  MEDICAL_SAFETY.md
evaluation/: __init__.py  open_world_mosaic.py  stress_suite.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: robots.txt  site.webmanifest  sitemap.xml
frontend/public/demo/: quality-report.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/tests/: ui.test.mjs
legacy/: README.md
legacy/models/: stitchnet.py
legacy/prototype/: regroup_tiles.py  stitch_auto.py
models/: losses.py  raft_microscopy_v2.pt
reports/: nist-mist.json  open-world-mosaic.json  raft-microscopy-metrics.json  residual-warp-metrics.json  stress-suite.json
scripts/: api_smoke.py  frontend.py
src/stitchnet/: __init__.py  blending.py  cli.py  config.py  io.py  optimizer.py  pipeline.py  registration.py  types.py
src/stitchnet/ml/: __init__.py  raft_refiner.py  residual_warp.py
tests/: conftest.py  test_api.py  test_core.py  test_ml.py  test_security.py
training/: __init__.py  evaluate_residual.py  residual_data.py  train_raft_refiner.py  train_residual.py
