[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stitchnet-lab"
version = "2.0.0"
description = "Confidence-aware microscopy mosaic registration and aberration correction"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "opencv-python>=4.9,<5",
  "pillow>=10,<13",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "scipy>=1.11,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
ml = ["torch>=2.3", "torchvision>=0.18"]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
stitchnet = "stitchnet.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "gpu: requires a CUDA-capable GPU",
  "integration: exercises multiple application layers",
  "slow: long-running stress or dataset validation",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
